Fixed loading spinner not showing when scrolled down.

--- a/src/components/UI/loadingSpinner/LoadingSpinner.module.css
+++ b/src/components/UI/loadingSpinner/LoadingSpinner.module.css
@@ -9,7 +9,7 @@
 }
 
 .wrapper {
-  position: absolute;
+  position: fixed;
   z-index: 210;
   top: 50%;
   left: 50%;
